Failed offline snapshots won't erase a successful one from the same page load.

If a second offline snapshot starts for the same page load where a
previous one was saved, it should not immediately delete it: as it might
fail the user would end up with no offline copy of the page. This change
fixes this issue.

Three new tests are added: one to cover this precise case and a couple
more to check for related situations. Also many comments were added or
updated.

BUG=655697

Review-Url: https://codereview.chromium.org/2542833003
Cr-Commit-Position: refs/heads/master@{#436086}

Former-commit-id: 96de1925bdf5c051bb903581a427d7f9795c0032